<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="admob_pub_id">ca-app-pub-6896123121341902~3110987991</string>
    <string name="ai_art">AI Art</string>
    <string name="ai_art_ads_content">You can earn more generation times by watching ads.</string>
    <string name="ai_art_ads_title">Join PRO - No ads, unlimited generate!</string>
    <string name="ai_art_all_style">All Style</string>
    <string name="ai_art_cfg_scale">CFG Scale</string>
    <string name="ai_art_cfg_scale_guide">"CFG Scale: Lower values give more creative
generation while higher values makes
generation follow more closely to the prompt."</string>
    <string name="ai_art_dialog_go_feedback_tips">"The content you entered has been restricted.
Please provide us with feedback so that we
can resolve this issue."</string>
    <string name="ai_art_dialog_go_feedback_title">Content Restriction</string>
    <string name="ai_art_dialog_watermark_tips">Watch an ad or Join Pro to remove the watermark.</string>
    <string name="ai_art_free_batch">Free x%1$s</string>
    <string name="ai_art_generate_normal_tips1">Image being processed. Stay on the page.</string>
    <string name="ai_art_generate_vip_tips1">Processing almost done. Masterpiece soon!</string>
    <string name="ai_art_generate_vip_tips2">Urgent processing for members, please wait a moment</string>
    <string name="ai_art_go_pro">Go Pro</string>
    <string name="ai_art_guide_advanced_section1">"Add Reference
Image"</string>
    <string name="ai_art_guide_advanced_section1_text">image strength: The higher the parameter value, the higher the similarity between the output and the original image.</string>
    <string name="ai_art_guide_advanced_section2">CFG Scale</string>
    <string name="ai_art_guide_advanced_section2_text">Lower values give more creative generation while higher values makes generation follow more closely to the prompt.</string>
    <string name="ai_art_guide_advanced_section3">Sampling Steps</string>
    <string name="ai_art_guide_advanced_section3_text">Results are better the more steps you use, however the more steps, the longer the generation takes. Generally, 20–30 steps is good enough.</string>
    <string name="ai_art_guide_faq">"Click here for
tutorials and FAQs"</string>
    <string name="ai_art_guide_generate">"Click the button to start
creating your art"</string>
    <string name="ai_art_guide_primary_section1">"Good cue words
create better images"</string>
    <string name="ai_art_guide_primary_section1_text">Describe the details in vocabulary, phrases, short sentences, and separate them with commas.</string>
    <string name="ai_art_guide_primary_section2">"Choose a style that
matches your image"</string>
    <string name="ai_art_guide_primary_section2_text">Specify the desired style of your image orpick ona from our list</string>
    <string name="ai_art_guide_primary_section3">Inspiration</string>
    <string name="ai_art_guide_primary_section3_text">Try picking your favorite image from the inspiration works we provide to generate</string>
    <string name="ai_art_guide_random_inspiration">"Click the button to get a random
inspiration prompt, which will
bring you unexpected surprises"</string>
    <string name="ai_art_guide_style">"Choose a style to
create better artwork"</string>
    <string name="ai_art_hd_magnification">HD magnification:</string>
    <string name="ai_art_hd_processing">HD processing</string>
    <string name="ai_art_image_similarity_guide">"image strength：The higher the parameter
value, the higher the similarity between
the output and the original image."</string>
    <string name="ai_art_input_hint">Please describe your desired artwork here</string>
    <string name="ai_art_inspirations_guide">"When you don't know how to generate better
results, you can try to select your favorite images
from our inspiration or follow the prompt writing
specifications of the inspiration to generate"</string>
    <string name="ai_art_negative_prompt">Negative Prompt</string>
    <string name="ai_art_negative_prompt_guide">"Negative Prompt: Negative prompt tell model
what not to include in the generated image."</string>
    <string name="ai_art_negative_prompt_hint">"Enter negative prompt
e.g.NSFW, mutilation,fuzzy,low quality"</string>
    <string name="ai_art_new_user_reward_inspiration_content">"Try randomly generating the
above PRO and NSFW surprise
content with one click"</string>
    <string name="ai_art_preview_tips">Prompt are used to generate images</string>
    <string name="ai_art_prompt_blank_tips">Please enter your inspiration</string>
    <string name="ai_art_prompt_history_footer">To display a maximum of 10 historical records.</string>
    <string name="ai_art_queue_normal_tips1">"In queue. Don't leave the page."</string>
    <string name="ai_art_queue_vip_tips1">Members are given priority, please do not leave.</string>
    <string name="ai_art_queue_vip_tips2">Prioritizing your image. Please wait.</string>
    <string name="ai_art_regenerate_tips">"Recreate your Ai artwork, the
possibilities are endless"</string>
    <string name="ai_art_remove_watermark">Remove Watermark</string>
    <string name="ai_art_reward_inspiration_content">"Random PRO and NSFW
surprise content"</string>
    <string name="ai_art_sampling_steps">Sampling Steps</string>
    <string name="ai_art_sampling_steps_guide">"Sampling Steps: Results are better the more
steps you use, however the more steps, the
longer the generation takes. Generally, 20–30
steps is good enough."</string>
    <string name="ai_art_see_more">See More</string>
    <string name="ai_art_sensitive_words">Sorry, your creation contains sensitive words:</string>
    <string name="ai_art_sensitive_words_tips">Please join pro to remove limit or delete sensitive words to create artwork</string>
    <string name="ai_art_style_guide">"Style: There are many art styles added to the AI
training library, and depending on the style you
choose, your artwork will have a unique look!"</string>
    <string name="ai_art_surprise">"Random pro and nsfw surprise content,
Click go create to reveal the
extraordinary rewards within"</string>
    <string name="ai_continue">Continue</string>
    <string name="ai_count_limit_content">Maximum creation limit reached for today to ensure optimal experience for premium users.</string>
    <string name="ai_create">Create Artwork</string>
    <string name="ai_prompt1">Enter a prompt</string>
    <string name="ai_select_style">Select Style</string>
    <string name="ai_try">Try</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="applovin_gdpr_are_you_sure_screen_message">"Allowing us and/or our partners to use this data for personalized ads and content and other purposes, as described in our Privacy Policy:

• Gives you a more personalized experience, ads, and content

• Helps support product improvements and developments

• Allows you to participate in promotions"</string>
    <string name="applovin_gdpr_are_you_sure_screen_title">Are you sure?</string>
    <string name="applovin_gdpr_back_button_text">Back</string>
    <string name="applovin_gdpr_learn_more_screen_bullet_1">Helping keep our App free!</string>
    <string name="applovin_gdpr_learn_more_screen_bullet_2">Giving you a more personal experience, including personalized ads and content</string>
    <string name="applovin_gdpr_learn_more_screen_bullet_3">Helping support product improvements and developments</string>
    <string name="applovin_gdpr_learn_more_screen_bullet_4">Allowing you to participate in promotions</string>
    <string name="applovin_gdpr_learn_more_screen_message_1">Thank you for downloading our App! Allowing us and our partners to use this data helps us create a unique App experience, including by:</string>
    <string name="applovin_gdpr_learn_more_screen_message_2">You can always change your selections later. If you choose not to share your data, you will still be able to access the App and you will still receive ads. However, those ads may be less relevant to your interests.</string>
    <string name="applovin_gdpr_understand_and_continue_button_text">I understand and confirm</string>
    <string name="camera_access_permission">Camera Access Permission</string>
    <string name="camera_access_permission_tips">"To Use the function, please allow access to
your Camera"</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete_account">Delete Account</string>
    <string name="exit">Exit</string>
    <string name="generate_exit_content">Any unsaved edits will be lost</string>
    <string name="generate_exit_title">Confirm to exit?</string>
    <string name="go_pro">Go Pro</string>
    <string name="hd_tips">"Confirm create higher
resolution images?"</string>
    <string name="hd_title">Generate HD Image</string>
    <string name="log_out">Log out</string>
    <string name="setting_sync_across_devices">Sync Across Devices</string>
    <string name="settings_account">Account</string>
    <string name="unbind_account">Unbind Account</string>
    <string name="watch_ad">Watch Ad</string>
</resources>