<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:background="@drawable/applovin_consent_flow_gdpr_rounded_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:elevation="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/applovin_sdk_consentFlowGdprControlsViewHeight">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@id/title_textview" android:text="@string/applovin_gdpr_are_you_sure_screen_title" style="@style/com.applovin.mediation.ConsentFlow.TitleTextView" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginBottom="20.0dip" android:src="@drawable/applovin_ic_warning_outline" />
            <TextView android:id="@id/message_textview" android:layout_marginBottom="20.0dip" android:text="@string/applovin_gdpr_are_you_sure_screen_message" android:layout_marginStart="@dimen/applovin_sdk_consentFlowGdprHorizontalMargin" android:layout_marginEnd="@dimen/applovin_sdk_consentFlowGdprHorizontalMargin" style="@style/com.applovin.mediation.ConsentFlow.BodyTextView" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/controls_view" android:layout_width="fill_parent" android:layout_height="@dimen/applovin_sdk_consentFlowGdprControlsViewHeight">
        <Button android:id="@id/back_button" android:layout_marginTop="8.0dip" android:text="@string/applovin_gdpr_back_button_text" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" style="@style/com.applovin.mediation.ConsentFlow.PositiveButton" />
        <Button android:id="@id/understand_and_confirm_button" android:layout_marginTop="8.0dip" android:layout_marginBottom="12.0dip" android:text="@string/applovin_gdpr_understand_and_continue_button_text" style="@style/com.applovin.mediation.ConsentFlow.NeutralButton" />
    </LinearLayout>
</FrameLayout>