<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_rectangle_radius_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:backgroundTint="@color/color_25273E"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.5dip" android:text="@string/generate_exit_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:yoloTextStyle="bold" />
    <com.art.generator.base.widget.YoloTextView android:textSize="14.0dip" android:textColor="@color/color_8F92AA" android:id="@id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/generate_exit_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/exit" android:background="@drawable/bg_rectangle_radius_200" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginBottom="20.0dip" android:foreground="@drawable/common_ripple_radius_200" android:text="@string/exit" android:layout_marginStart="20.0dip" android:backgroundTint="@color/color_34365A" android:foregroundTintMode="src_in" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/cancel" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/content" app:layout_constraintWidth_percent="0.4" app:yoloTextStyle="bold" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/cancel" android:background="@drawable/bg_button" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/cancel" android:layout_marginStart="10.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintBottom_toBottomOf="@id/exit" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/exit" app:layout_constraintWidth_percent="0.4667" app:yoloTextStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>