<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/dialog_view" android:background="@drawable/applovin_consent_flow_gdpr_rounded_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:elevation="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/applovin_sdk_consentFlowGdprControlsViewHeight" android:elevation="10.0dip">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/main_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/title_textview" style="@style/com.applovin.mediation.ConsentFlow.TitleTextView" />
            <TextView android:id="@id/message_textview" android:layout_marginBottom="20.0dip" android:text="@string/applovin_gdpr_learn_more_screen_message_1" android:layout_marginStart="@dimen/applovin_sdk_consentFlowGdprHorizontalMargin" android:layout_marginEnd="@dimen/applovin_sdk_consentFlowGdprHorizontalMargin" style="@style/com.applovin.mediation.ConsentFlow.BodyTextView" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                <ImageView android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/applovin_ic_baseline_add_circle_outline" android:layout_marginStart="4.0dip" android:layout_marginEnd="10.0dip" />
                <TextView android:layout_gravity="center_vertical" android:layout_marginRight="16.0dip" android:text="@string/applovin_gdpr_learn_more_screen_bullet_1" android:layout_marginEnd="16.0dip" style="@style/com.applovin.mediation.ConsentFlow.BodyTextView" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                <ImageView android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/applovin_ic_baseline_add_circle_outline" android:layout_marginStart="4.0dip" android:layout_marginEnd="10.0dip" />
                <TextView android:layout_gravity="center_vertical" android:layout_marginRight="16.0dip" android:text="@string/applovin_gdpr_learn_more_screen_bullet_2" android:layout_marginEnd="16.0dip" style="@style/com.applovin.mediation.ConsentFlow.BodyTextView" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                <ImageView android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/applovin_ic_baseline_add_circle_outline" android:layout_marginStart="4.0dip" android:layout_marginEnd="10.0dip" />
                <TextView android:layout_gravity="center_vertical" android:layout_marginRight="16.0dip" android:text="@string/applovin_gdpr_learn_more_screen_bullet_3" android:layout_marginEnd="16.0dip" style="@style/com.applovin.mediation.ConsentFlow.BodyTextView" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                <ImageView android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/applovin_ic_baseline_add_circle_outline" android:layout_marginStart="4.0dip" android:layout_marginEnd="10.0dip" />
                <TextView android:layout_gravity="center_vertical" android:layout_marginRight="16.0dip" android:text="@string/applovin_gdpr_learn_more_screen_bullet_4" android:layout_marginEnd="16.0dip" style="@style/com.applovin.mediation.ConsentFlow.BodyTextView" />
            </LinearLayout>
            <TextView android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/applovin_gdpr_learn_more_screen_message_2" android:layout_marginStart="@dimen/applovin_sdk_consentFlowGdprHorizontalMargin" android:layout_marginEnd="@dimen/applovin_sdk_consentFlowGdprHorizontalMargin" style="@style/com.applovin.mediation.ConsentFlow.BodyTextView" />
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:layout_gravity="bottom" android:id="@id/controls_view" android:layout_width="fill_parent" android:layout_height="@dimen/applovin_sdk_consentFlowGdprControlsViewHeight">
        <Button android:layout_gravity="top" android:id="@id/back_button" android:layout_marginTop="8.0dip" android:layout_marginBottom="12.0dip" android:text="@string/applovin_gdpr_back_button_text" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" style="@style/com.applovin.mediation.ConsentFlow.PositiveButton" />
    </FrameLayout>
</FrameLayout>