<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/back" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginTop="12.5dip" android:src="@drawable/neo_ic_inspirations_close" android:layout_marginStart="15.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_account" android:layout_marginStart="10.0dip" app:layout_constraintBottom_toBottomOf="@id/back" app:layout_constraintStart_toEndOf="@id/back" app:layout_constraintTop_toTopOf="@id/back" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="13.0dip" android:textStyle="bold" android:textColor="@color/color_8F92AA" android:id="@id/tv_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="29.5dip" android:text="@string/setting_sync_across_devices" android:layout_marginStart="15.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/back" />
    <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@id/recycler_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_tip" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="@color/color_07080D" android:gravity="center" android:id="@id/logout_button" android:background="@drawable/bg_rectangle_radius_200" android:layout_width="0.0dip" android:layout_height="52.0dip" android:layout_marginBottom="10.0dip" android:text="@string/log_out" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" android:backgroundTint="@color/white" app:layout_constraintBottom_toTopOf="@id/accountButtonAccount" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/accountButtonAccount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.5dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="12.0dip" android:textColor="@color/color_8F92AA" android:gravity="center" android:id="@id/unbind_account_button" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unbind_account" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <View android:background="@color/color_8F92AA" android:visibility="gone" android:layout_width="0.5dip" android:layout_height="10.0dip" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="12.0dip" android:textColor="@color/color_8F92AA" android:gravity="center" android:id="@id/delete_account_button" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete_account" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>