<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/neo_img_pop_bg" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/close" android:padding="5.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_margin="10.0dip" android:src="@drawable/cut_ic_ai_close" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.utils.widget.ImageFilterView android:id="@id/cover" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="30.0dip" android:src="@drawable/neo_img_hd_pop" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_percent="0.4166" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/hd_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cover" app:yoloTextStyle="bold" />
    <com.art.generator.base.widget.YoloTextView android:textSize="14.0dip" android:textColor="@color/color_8F92AA" android:gravity="center" android:id="@id/tips" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip" android:text="@string/hd_tips" android:lineSpacingExtra="6.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/cancel" android:background="@drawable/bg_rectangle_radius_200" android:layout_width="0.0dip" android:layout_height="52.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="35.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="23.0dip" android:foreground="@drawable/common_ripple_radius_200" android:text="@string/cancel" android:backgroundTint="@color/color_34365A" android:foregroundTintMode="src_in" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tips" app:layout_constraintWidth_percent="0.3611" app:yoloTextStyle="bold" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:orientation="horizontal" android:id="@id/confirm" android:background="@drawable/bg_button" android:layout_width="0.0dip" android:layout_height="52.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="35.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="23.0dip" android:text="@string/confirm" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/tips" app:layout_constraintWidth_percent="0.5" app:yoloTextStyle="bold" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/watchAd" android:background="@drawable/bg_rectangle_radius_200" android:layout_width="0.0dip" android:layout_height="52.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="35.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="23.0dip" android:foreground="@drawable/common_ripple_radius_200" android:text="@string/watch_ad" android:backgroundTint="@color/color_34365A" android:foregroundTintMode="src_in" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tips" app:layout_constraintWidth_percent="0.3611" app:yoloTextStyle="bold" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/goPro" android:background="@drawable/bg_button" android:layout_width="0.0dip" android:layout_height="52.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="35.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="23.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/watchAd" app:layout_constraintTop_toBottomOf="@id/tips">
        <androidx.appcompat.widget.AppCompatImageView android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/neo_ic_pro" />
        <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/go_pro" android:includeFontPadding="false" android:layout_marginStart="7.0dip" app:yoloTextStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>