<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/neo_img_pop_bg" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/close" android:padding="5.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_margin="10.0dip" android:src="@drawable/cut_ic_ai_close" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/icon" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="34.0dip" android:src="@drawable/neo_img_camera_per" app:layout_constraintDimensionRatio="805:730" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_percent="0.2236" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/camera_access_permission" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/icon" app:yoloTextStyle="bold" />
    <com.art.generator.base.widget.YoloTextView android:textSize="14.0dip" android:textColor="@color/color_8F92AA" android:gravity="center" android:id="@id/tips" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip" android:text="@string/camera_access_permission_tips" android:lineSpacingExtra="6.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <com.art.generator.base.widget.YoloTextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/confirm" android:background="@drawable/bg_button" android:layout_width="0.0dip" android:layout_height="52.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="37.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="23.0dip" android:text="@string/confirm" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tips" app:yoloTextStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>